Expose get symptoms admin api
